# rpg-sim

./: CMakeLists.txt  README.md
res/: homescreen
res/arts/: Chipolino.txt  Dino.txt  Fly.txt  Flytrap.txt  Orange Slime.txt  Shlupik.txt  Slime.txt
res/enemies/: Fly.json  Shlupik.json
res/heroes/: Archer.json  Hero.json  Mage.json  Paladin.json  Rogue.json  Swordsman.json  Witcher.json
res/items/: Adventurer's Arsenal.json  Alchemy Kit.json  Weapon Collection.json
src/: main.cpp
src/controller/: Controller.cpp  Controller.h
src/model/: Entity.cpp  Entity.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  Model.cpp  Model.h  Move.cpp  Move.h
src/view/: View.cpp  View.h
